clusters/kubernetes-cluster-02/manifests/namespaces/istio-system/virtualservice/helloworld-zufardhiyaulhaq-dev-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: helloworld-zufardhiyaulhaq-dev-vs
  namespace: istio-system
spec:
  hosts:
  - "helloworld.zufardhiyaulhaq.dev"
  gateways:
  - istio-system/helloworld-zufardhiyaulhaq-dev-gateway
  http:
  - name: "ratelimit-examples-helloworld-v1-default-route"
    match:
    - port: 443
      uri:
        prefix: /ratelimit/
    rewrite:
      uri: /
    route:
      - destination:
          port:
            number: 80
          host: http-https-echo.default.svc.cluster.local
        weight: 100
  - name: "http-https-echo-default-route"
    match:
    - port: 443
      uri:
        prefix: /
    route:
      - destination:
          port:
            number: 80
          host: examples-helloworld-v1.default.svc.cluster.local
        weight: 100
  exportTo:
    - "."
