clusters/kubernetes-cluster-02/manifests/namespaces/istio-system/virtualservice/server-mtls-zufardhiyaulhaq-dev-mesh-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: server-mtls-zufardhiyaulhaq-dev-mesh-vs
  namespace: istio-system
spec:
  hosts:
  - server.mtls.zufardhiyaulhaq.dev
  gateways:
  - mesh
  http:
  - match:
    - gateways:
      - mesh
      port: 80
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: server-mtls-zufardhiyaulhaq-dev
        port:
          number: 443
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: 5xx
