clusters/kubernetes-cluster-02/manifests/namespaces/istio-system/virtualservice/server-mtls-zufardhiyaulhaq-dev-mtls-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: server-mtls-zufardhiyaulhaq-dev-mtls-vs
  namespace: istio-system
spec:
  hosts:
  - server.mtls.zufardhiyaulhaq.dev
  gateways:
  - server-mtls-zufardhiyaulhaq-dev-egress-gw
  http:
  - match:
    - gateways:
      - server-mtls-zufardhiyaulhaq-dev-egress-gw
      port: 443
    route:
    - destination:
        host: server.mtls.zufardhiyaulhaq.dev
        subset: tls-origination
        port:
          number: 443
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: 5xx
