clusters/kubernetes-cluster-02/manifests/namespaces/istio-system/virtualservice/server-mtls-zufardhiyaulhaq-dev-mtls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: server-mtls-zufardhiyaulhaq-dev-mtls
  namespace: istio-system
spec:
  hosts:
  - server.mtls.zufardhiyaulhaq.dev
  gateways:
  - server-mtls-zufardhiyaulhaq-dev-mtls
  - mesh
  http:
  - match:
    - gateways:
      - mesh
      port: 80
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: server-mtls-zufardhiyaulhaq-dev
        port:
          number: 443
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: 5xx
  - match:
    - gateways:
      - server-mtls-zufardhiyaulhaq-dev-mtls
      port: 443
    route:
    - destination:
        host: server.mtls.zufardhiyaulhaq.dev
        subset: tls-origination
        port:
          number: 443
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: 5xx
